--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@ body {
 
   .top-wrapper {
     padding: 180px 0 100px 0;
-    background-image: url(C:\Users\ASUS\Downloads\images (1).jfif);
+    background-image: url(./C:\Users\ASUS\Downloads\images (1).jfif);
     background-size: cover;
     color: white;
     text-align: center;
